--- a/envelope.css
+++ b/envelope.css
@@ -40,15 +40,15 @@ form input:hover {
 }
 
 .submit-button {
-   border:1px solid transparent;
-   color: #cc0000;
-   background-color: white;
+   border:1px solid #010208;
+   background-color: #cc0000;
+   color: white;
 }
 
 .submit-button:hover {
    border:1px solid #010208;
-   background-color: #cc0000;
-   color: white;
+   color: #cc0000;
+   background-color: white;
 }
 
 .form-submission {
